--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "eslint": "^7.14.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
-    "nodemon": "^2.0.6"
+    "knex": "^0.21.12",
+    "nodemon": "^2.0.6",
+    "pg": "^8.5.1",
+    "sqlite3": "^5.0.0"
   }
 }
