--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -16,16 +17,5 @@
   "bugs": {
     "url": "https://github.com/eoinlynchcodes/context-node/issues"
   },
-  "homepage": "https://github.com/eoinlynchcodes/context-node#readme",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.14.0",
-    "express": "^4.17.1",
-    "helmet": "^4.2.0",
-    "knex": "^0.21.12",
-    "nodemon": "^2.0.6",
-    "pg": "^8.5.1",
-    "sqlite3": "^5.0.0"
-  }
+  "homepage": "https://github.com/eoinlynchcodes/context-node#readme"
 }
