--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "heroku-postbuild": "npm install --production"
+  },
+  "engines": {
+    "node": "12.16.3",
+    "npm": "6.14.4"
   },
   "repository": {
     "type": "git",
