--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/eoinlynchcodes/context-node#readme",
   "dependencies": {
+    "knex": "^0.21.12",
     "pg": "^8.5.1"
   }
 }
