--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon index.js",
-    "heroku-postbuild": "npm install --production"
+    "server": "nodemon index.js"
   },
   "engines": {
     "node": "12.16.3",
@@ -24,7 +23,11 @@
   },
   "homepage": "https://github.com/eoinlynchcodes/context-node#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "knex": "^0.21.12",
-    "pg": "^8.5.1"
+    "nodemon": "^2.0.6",
+    "pg": "^8.5.1",
+    "sqlite3": "^5.0.0"
   }
 }
