--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "homepage": "https://github.com/eoinlynchcodes/context-node#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.2.0",
     "knex": "^0.21.12",
     "nodemon": "^2.0.6",
     "pg": "^8.5.1",
