--- a/package.json
+++ b/package.json
@@ -7,10 +7,6 @@
     "start": "node index.js",
     "server": "nodemon index.js"
   },
-  "engines": {
-    "node": "12.16.3",
-    "npm": "6.14.4"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/eoinlynchcodes/context-node.git"
@@ -23,13 +19,21 @@
   },
   "homepage": "https://github.com/eoinlynchcodes/context-node#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "knex": "^0.21.12",
-    "nodemon": "^2.0.6",
     "pg": "^8.5.1",
     "sqlite3": "^5.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.15.0",
+    "nodemon": "^2.0.6"
+  },
+  "engines": {
+    "node": "12.16.3",
+    "npm": "6.14.4"
   }
 }
