--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "context-node",
   "version": "1.0.0",
-  "description": "",
+  "description": "To start: `node index.js` in the terminal.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
