--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "bugs": {
     "url": "https://github.com/eoinlynchcodes/context-node/issues"
   },
+  "config": {
+
+  },
   "homepage": "https://github.com/eoinlynchcodes/context-node#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -33,7 +36,7 @@
     "nodemon": "^2.0.6"
   },
   "engines": {
-    "node": "12.16.3",
-    "npm": "6.14.4"
+    "node": "14.15.4",
+    "npm": "6.14.10"
   }
 }
