--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.12",
+    "mongoose": "^5.11.17",
     "pg": "^8.5.1",
     "sqlite3": "^5.0.0"
   },
